text-align fix

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -247,6 +247,8 @@
 .buypara {
   font-size: 1.5rem;
   margin-bottom: 20px;
+  text-align: center;
+  text-align-last: center;
 }
 
 .buybutton {
